--- a/src/main/resources/templates/books/list-books.html
+++ b/src/main/resources/templates/books/list-books.html
@@ -28,7 +28,8 @@
 				<th>Book Summary</th>
 				<th>ISBN</th>
 				<th>Copies Purchased</th>
-				<th>Copies for loan</th>
+				<th>Action</th>
+
 			</tr>
 		</thead>
 		
@@ -39,7 +40,7 @@
 			<td th:text="${tempBook.summary}" />
 			<td th:text="${tempBook.ISBN}" />
 			<td th:text="${tempBook.copiesPurchased}" />
-			<td th:text="${tempBook.copiesAvailable}" />
+
 
 
 
