--- a/src/main/resources/templates/users/list-users.html
+++ b/src/main/resources/templates/users/list-users.html
@@ -27,6 +27,7 @@
 			<th>First Name</th>
 			<th>Last Name</th>
 			<th>Address</th>
+			<th>Action</th>
 
 		</tr>
 		</thead>
@@ -36,7 +37,7 @@
 
 			<td th:text="${tempUser.firstName}" />
 			<td th:text="${tempUser.lastName}" />
-			<td th:number="${tempUser.address}" />
+			<td th:text="${tempUser.address}" />
 
 
 
